# botbowl

./: Cargo.toml  pyproject.toml  requirements.txt  setup.py
botbowl/core/: game.py  model.py  procedure.py
src/: lib.rs  table.rs
src/table/: mod.rs
tests/rust-bindings/: test_table.py
