[package]
name = "botbowl"
version = "1.1.0"
edition = "2021"

[package.metadata.setuptools-rust]
name = "botbowl.rust_extension"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_extension"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.25.0", features = ["extension-module"]}
